--- a/BarlangWebApp/BarlangWebApp/Pages/Shared/_Layout.cshtml
+++ b/BarlangWebApp/BarlangWebApp/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/TelepulesAlapjan">Szűrés település alapján</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/BarlangokSzama">Barlangok száma település alapján</a>
+                        </li>
                     </ul>
                 </div>
             </div>
